old/overlays/prod/apps/home-assistant/old/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-svc
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - name: tcp-8123
      port: 8123
      targetPort: 8123
    - name: tcp-8080
      port: 8080
      targetPort: 8080
  selector:
    app.name: home-assistant
