old/overlays/prod/apps/home-assistant/old/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: apps
  name: home-assistant
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "simplefxn-issuer"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
        }
spec:
  tls:
  - hosts:
    - home-assistant.simplefxn.com
    secretName: home-assistant-simplefxn-tls
  rules:
  - host: home-assistant.simplefxn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant-svc
            port:
              number: 8123
